@@ -1,20 +1,24 @@
 package com.codeborne.pdftest;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.NoSuchFileException;
 
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.fail;
 
 public class InvalidPdfTest {
-  @Test(expected = NoSuchFileException.class)
-  public void throws_IOException_ifFailedToReadPdfFile() throws IOException {
-    new PDF(new File("src/test/resources/invalid-file.pdf"));
+  @Test
+  public void throws_IOException_ifFailedToReadPdfFile() {
+    File missingFile = new File("src/test/resources/invalid-file.pdf");
+    assertThatThrownBy(() -> new PDF(missingFile))
+      .isInstanceOf(NoSuchFileException.class)
+      .hasMessage(missingFile.getAbsolutePath());
   }
 
   @Test
